# fastapi-flare

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_results.txt
docs/: issues.md  stability.md
examples/: bot_stress_test.py  example.py  example_issues.py  example_non_http_capture.py  example_pg_sqlalchemy.py  example_sqlite_sqlalchemy.py  test_error_capture.py
src/fastapi_flare/: __init__.py  alerting.py  config.py  fingerprint.py  handlers.py  metrics.py  middleware.py  notifiers.py  queue.py  router.py  schema.py  storage.py  worker.py  zitadel.py
src/fastapi_flare/integrations/: logging.py  sqlalchemy.py
src/fastapi_flare/storage/: __init__.py  base.py  pg_storage.py  redis_storage.py  sqlite_storage.py
src/fastapi_flare/templates/: _macros.html  _scripts_global.html  _styles.html  dashboard.html  errors.html  issues.html  layout.html  metrics.html  requests.html  settings.html  storage.html
tests/: test_body_capture.py  test_fingerprint.py  test_issues_storage.py  test_request_buffer.py  test_response_body.py
