[project]
name = "fastapi-flare"
version = "0.2.0"
description = "Lightweight self-hosted debugger and metrics dashboard for FastAPI."
authors = [
    {name = "Gabriel",email = "ondarks360@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["fastapi", "debugging", "monitoring", "errors", "postgresql", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.104.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "starlette>=0.27.0",
    "scalar-fastapi>=1.6.2",
    "httpx>=0.24.0",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
auth       = ["python-jose[cryptography]>=3.3.0", "httpx>=0.24.0", "itsdangerous>=2.0.0"]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0.0"]

[project.urls]
Homepage   = "https://github.com/londarks/fastapi-flare"
Repository = "https://github.com/londarks/fastapi-flare"
Issues     = "https://github.com/londarks/fastapi-flare/issues"

[tool.poetry]
packages = [{include = "fastapi_flare", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
